--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 /* Sing up page Css Start */
 
 .form{
-    padding: 1.55rem 1.8rem;
+    padding: 25px 30px;
 }
 .form header{
     font-size: 25px;
@@ -38,7 +38,7 @@
 .form form .error-text{
     color: #bb0101;
     background-color: #f7afaf;
-    padding: .5rem .6rem;
+    padding: 15px 30px;
     text-align: center;
     border-radius: 5px;
     margin: 0 0 10px 0;
@@ -60,6 +60,7 @@
 .form form .filled{
     display: flex;
     flex-flow: column;
+    position: relative;
     margin-bottom: 10px;
 }
 
@@ -94,6 +95,15 @@ border-radius: 5px;
     cursor: pointer;
 
 }
+.form form .filled i{
+    color: #ccc;
+    position: absolute;
+    top: 70%;
+    right: 15px;
+    transform: translateY(-50%);
+    cursor: pointer;
+
+}
 .form .linking{
     margin: 10px 0; 
     font-size: 17px;
@@ -105,4 +115,115 @@ border-radius: 5px;
 .form .linking a:hover{
     text-decoration: underline;
 }
+
 /* Sing up page Css End */
+
+/* --------------------------------------------- */
+
+/* User Section Start  */
+
+.users{
+    padding: 25px 30px;
+}
+.users header,
+.users-list a{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #e7e7e7;
+    padding-bottom: 20px ;
+}
+.wrapper img{
+    object-fit: cover;
+    border-radius: 50%;
+}
+:is(.users,.users-list ) .content,
+ a .content{
+    display: flex;
+    align-items: center;
+}
+.users header .content img{
+    height: 50px;
+    width: 50px;
+ }
+ :is(.users,.users-list ) .details{
+    margin-left: 15px;
+    color: #000;
+ }
+ :is(.users,.users-list ) .details span{
+    font-style: 18px;
+    font-weight: 500;
+ }
+ .users header .logout{
+    padding: 7px 15px;
+    background-color: #333;
+    color: #fff;
+    font-size: 17px;
+    border-radius: 5px;
+ }
+.users .search{
+    margin: 20px 0; 
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+}
+.users .search .text{
+    font-size: 18px;
+} 
+.users .search input{
+    height: 42px;
+    width: calc(100% - 50px);
+    position: absolute;
+    border: 1px solid #ccc;
+    padding: 0 13px;
+    font-size: 16px;
+    border-radius: 5px;
+    outline: none;
+
+} 
+.users .search button{
+    height: 42px;
+    width: 47px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    outline: none;
+    font-size: 17px;
+    border-radius: 0 5px 5px 0 ;
+    cursor: pointer;
+}
+.users-list{
+    max-height: 350px;
+    overflow-y: auto;
+}
+.users-list::-webkit-scrollbar{
+    width: 0;
+}
+.users-list a{
+    padding-right: 15px;
+    margin-bottom: 15px;
+    page-break-after: 10px ;
+    border-bottom-color:#f1f1f1 ;
+}
+.users-list a:last-child{
+    border: none;
+    margin-bottom: 0px;
+}
+.users-list a .content img{
+    height: 40px ;
+    width: 40px;
+}
+.users-list a .content p{
+    color: #67676a;
+}
+.users-list a .current-status{
+    font-size: 12px;
+    color: #4ace4a;
+}
+/* Offline & Online work in backend  */
+.users-list a .current-status.offline{
+    font-size: 12px;
+    color: #ccc;
+}
+/* User Section End */
