--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ border-radius: 5px;
     max-height: 350px;
     overflow-y: auto;
 }
-.users-list::-webkit-scrollbar{
+:is(.users-list,.chat-box)::-webkit-scrollbar{
     width: 0;
 }
 .users-list a{
@@ -227,3 +227,102 @@ border-radius: 5px;
     color: #ccc;
 }
 /* User Section End */
+
+/* --------------------------------------------------- */
+
+/* Chat area Start */
+.chat-area header{
+    display: flex;
+    align-items: center;
+    padding: 18px 30px;
+    
+}
+.chat-area header .back-icon{
+    color: #333;
+    font-size: 18px;
+}
+.chat-area header img{
+height: 45px;
+width: 45px;
+margin: 0 15px;
+}
+.chat-area header span{
+    font-size: 17px;
+    font-weight: 500;
+}
+.chat-box{
+    height: 500px;
+    background-color: #f7f7f7;
+    padding: 10px 30px 20px 30px;
+    box-shadow: inset 0 32px 32px -32px #00000010,inset 0 -32px 32px -32px #00000010;
+    overflow-y: auto;
+}
+.chat-box .chat {
+    margin: 15px 0;
+}
+.chat-box .chat p {
+    padding: 8px 16px;
+    box-sizing: border-box;
+    word-wrap: break-word;
+    box-shadow:  0 0 32px  #00000023, 0 16px 16px -16px #00000016;
+
+}
+.chat-box .outgoing{
+    display: flex;
+}
+.outgoing .details{
+    margin-left: auto;;
+    max-width: calc(100% - 130px);
+}
+.outgoing .details p {
+    background-color: #333;
+    color: #fff;
+    border-radius: 18px 18px 0 18px;
+}
+
+.chat-box .incoming{
+    display: flex;
+    align-items: flex-end;
+}
+.chat-box .incoming img {
+    height: 35px;
+    width: 35px;
+    
+}
+.incoming .details{
+    margin-left: 10px;
+    margin-right: auto;;
+    max-width: calc(100% - 130px);
+}
+.incoming .details p{
+    background-color: #fff;
+    color: #333;
+    border-radius: 18px 18px 18px 0;
+    
+}
+.chat-area .typing-section{
+    padding: 18px 30px;
+    display: flex;
+    justify-content: space-between;
+}
+.typing-section input{
+    height: 45px ;
+    width: calc(100% - 58px);
+    font-size: 17px;
+    border: 1px solid #ccc ;
+    padding: 0 13px;
+    border-radius: 5px;
+    outline: none;
+    
+}
+.typing-section button{
+    width: 55px;
+    border: none;
+    outline: none;
+    background-color: #333 ;
+    color: #fff;
+    font-size: 19px;
+    cursor: pointer;
+    border-radius: 0 5px 5px 0px;
+}
+/* Chat area End */
